src/core-crm/objects/IP_Management__c/IP_Management__c.object-meta.xml
<CustomObject>
    <description>This object will be used to track/record administrative information relating to Intellectual Property.</description>
    <label>IP Management</label>
    <nameField>
        <displayFormat>IPM-{00000}</displayFormat>
        <label>IP Management Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IP Managements</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>