src/core-crm/objects/IP_Management__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a related Engagement.</description>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>IP Managements</relationshipLabel>
    <relationshipName>IP_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>