src/core-crm/objects/IP_Management__c/fields/Granted_Comment__c.field-meta.xml
<CustomField>
    <fullName>Granted_Comment__c</fullName>
    <description>User entered comment about the IP being granted.</description>
    <label>Granted Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>