src/core-crm/objects/IP_Management__c/fields/Granted_Date__c.field-meta.xml
<CustomField>
    <fullName>Granted_Date__c</fullName>
    <description>The date the IP is granted.</description>
    <label>Granted Date</label>
    <type>Date</type>
</CustomField>