src/core-crm/objects/IP_Management__c/fields/IP_Description__c.field-meta.xml
<CustomField>
    <fullName>IP_Description__c</fullName>
    <description>Description of the IP Management record.</description>
    <label>IP Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>