src/core-crm/objects/IP_Management__c/fields/IP_Management_Name__c.field-meta.xml
<CustomField>
    <fullName>IP_Management_Name__c</fullName>
    <description>The business entered name/title for the IP Management record. The field value has a business defined format.

Format: IPM: &lt;Current Year&gt; - &lt;IP Detail&gt;</description>
    <label>IP Management Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>