src/core-crm/objects/IP_Management__c/fields/IP_Name__c.field-meta.xml
<CustomField>
    <fullName>IP_Name__c</fullName>
    <description>The business entered name/title for the IP Management record. The field value has a business defined format.</description>
    <label>IP Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>