src/core-crm/objects/IP_Management__c/fields/IP_Type__c.field-meta.xml
<CustomField>
    <fullName>IP_Type__c</fullName>
    <label>IP Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patent</fullName>
            </value>
            <value>
                <fullName>Trademark</fullName>
            </value>
            <value>
                <fullName>Design Rights</fullName>
            </value>
            <value>
                <fullName>Plant Breeders Rights</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>