src/core-crm/objects/IP_Management__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Intellectual Property is active or not.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>