src/core-crm/objects/IP_Management__c/fields/Lapsed_Comment__c.field-meta.xml
<CustomField>
    <fullName>Lapsed_Comment__c</fullName>
    <description>User entered comment about the IP being lapsed.</description>
    <label>Lapsed Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>