src/core-crm/objects/IP_Management__c/fields/Lapsed_Date__c.field-meta.xml
<CustomField>
    <fullName>Lapsed_Date__c</fullName>
    <description>The date the IP lapsed.</description>
    <label>Lapsed Date</label>
    <type>Date</type>
</CustomField>