src/core-crm/objects/IP_Management__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a related Opportunity.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>IP Managements</relationshipLabel>
    <relationshipName>IP_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>