src/core-crm/objects/IP_Management__c/fields/Outcome_Summary__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Summary__c</fullName>
    <description>Business entered description/summary of the Stage Outcome (when IP Management record moves from one stage to the next).</description>
    <label>Outcome Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>