src/core-crm/objects/IP_Management__c/fields/Parent_IP_Management_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_IP_Management_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the IP Management record identified as the ‘Parent’ another IP Management record.</description>
    <label>Parent IP Management Name</label>
    <referenceTo>IP_Management__c</referenceTo>
    <relationshipLabel>IP Managements</relationshipLabel>
    <relationshipName>IP_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>