src/core-crm/objects/IP_Management__c/fields/Parent_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Relationship_Type__c</fullName>
    <label>Parent Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Divisional</fullName>
            </value>
            <value>
                <fullName>Continuation In-Part</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>