src/core-crm/objects/IP_Management__c/fields/Patent_Number__c.field-meta.xml
<CustomField>
    <fullName>Patent_Number__c</fullName>
    <description>Identifier for a Patent once it has been granted.</description>
    <label>Patent Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>