src/core-crm/objects/IP_Management__c/fields/Rejected_Comment__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Comment__c</fullName>
    <description>User entered comment about the IP being rejected.</description>
    <label>Rejected Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>