src/core-crm/objects/IP_Management__c/fields/Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Date__c</fullName>
    <description>The date the IP is rejected.</description>
    <label>Rejected Date</label>
    <type>Date</type>
</CustomField>