src/core-crm/objects/IP_Management__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <description>The date the IP needs to be renewed.</description>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>