src/core-crm/objects/IP_Management__c/fields/Technology_Number__c.field-meta.xml
<CustomField>
    <fullName>Technology_Number__c</fullName>
    <description>Id for an item of intellectual property.</description>
    <label>Technology Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>