src/core-crm/objects/IP_Management__c/fields/WIPO_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>WIPO_Country_Code__c</fullName>
    <description>The Country/Jurisdiction that the IP Management record relates to.</description>
    <label>WIPO Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WIPO_Country_Code</valueSetName>
    </valueSet>
</CustomField>