src/core-crm/objects/IP_Management__c/fields/WIPO_Publication_Number__c.field-meta.xml
<CustomField>
    <fullName>WIPO_Publication_Number__c</fullName>
    <description>WIPO identifier for a Patent.</description>
    <label>WIPO Publication Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>