src/core-crm/objects/IP_Management__c/recordTypes/Design_Rights.recordType-meta.xml
<RecordType>
    <fullName>Design_Rights</fullName>
    <active>true</active>
    <description>Capture Intellectual Property Design Rights.</description>
    <label>Design Rights</label>
</RecordType>