src/core-crm/objects/IP_Management__c/recordTypes/Patent.recordType-meta.xml
<RecordType>
    <fullName>Patent</fullName>
    <active>true</active>
    <description>Capture Intellectual Property Patents.</description>
    <label>Patent</label>
</RecordType>