src/core-crm/objects/IP_Management__c/recordTypes/Plant_Breeders_Rights.recordType-meta.xml
<RecordType>
    <fullName>Plant_Breeders_Rights</fullName>
    <active>true</active>
    <description>Capture Intellectual Property Plant Breeders Rights.</description>
    <label>Plant Breeders Rights</label>
</RecordType>