src/core-crm/objects/IP_Management__c/recordTypes/Trademark.recordType-meta.xml
<RecordType>
    <fullName>Trademark</fullName>
    <active>true</active>
    <description>Capture Intellectual Property Trademarks.</description>
    <label>Trademark</label>
</RecordType>