src/core-crm/objects/IP_Management__c/validationRules/Granted_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Granted_Date_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Stage_Name__c ),
ISPICKVAL(Stage_Name__c , &apos;Granted&apos;),
ISBLANK( Granted_Date__c )
)</errorConditionFormula>
    <errorDisplayField>Granted_Date__c</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>