src/core-crm/objects/IP_Management__c/validationRules/Lapsed_Comment_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Lapsed_Comment_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Stage_Name__c ),
ISPICKVAL(Stage_Name__c , &apos;Lapsed&apos;),
ISBLANK( Lapsed_Comment__c )
)</errorConditionFormula>
    <errorDisplayField>Lapsed_Comment__c</errorDisplayField>
    <errorMessage>Mandatory field</errorMessage>
</ValidationRule>