src/core-crm/objects/IP_Management__c/validationRules/Rejected_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejected_Date_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Stage_Name__c ),
ISPICKVAL(Stage_Name__c , &apos;Rejected&apos;),
ISBLANK( Rejected_Date__c )
)</errorConditionFormula>
    <errorDisplayField>Rejected_Date__c</errorDisplayField>
    <errorMessage>Mandatory field</errorMessage>
</ValidationRule>