src/core-crm/objects/IP_Management__c/listViews/All_IP_Management.listView-meta.xml
<ListView>
    <fullName>All_IP_Management</fullName>
    <columns>NAME</columns>
    <columns>IP_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Stage_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All IP Management</label>
</ListView>